# Projet_echecs

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
CMakeUtils/: files_and_folders.cmake
assets/model/: bishop.glb  king.glb  knight.glb  pawn.glb  queen.glb  rook.glb
assets/models/Bishop/: Bishop_black.mtl  Bishop_white.mtl
assets/models/Board/: Black_cube.mtl  Board_cube.mtl  White_cube.mtl
assets/models/King/: King_black.mtl  King_white.mtl
assets/models/Knight/: Knight_black.mtl  Knight_white.mtl
assets/models/Pawn/: Pawn_black.mtl  Pawn_white.mtl
assets/models/Queen/: Queen_black.mtl  Queen_white.mtl
assets/models/Rook/: Rook_black.mtl  Rook_white.mtl
assets/shaders/: 3D.vs.glsl  directionallight.fs.glsl  normals.fs.glsl
lib/glimac/: CMakeLists.txt
lib/glimac/glimac/: FreeflyCamera.hpp  Geometry.hpp  TrackballCamera.hpp
lib/glimac/src/: FreeflyCamera.cpp  TrackballCamera.cpp
src/: CMakeLists.txt  Mesh.cpp  Renderer.cpp  Shader.cpp  board.cpp  board2DRenderer.cpp  game.cpp  main.cpp  maths.cpp  moves.cpp  pieces.cpp  player.cpp
src/includes/: Mesh.hpp  Renderer.hpp  Shader.hpp  board.hpp  board2DRenderer.hpp  game.hpp  maths.hpp  moves.hpp  pieces.hpp  player.hpp  types.hpp
